--- a/clashN/clashN/Forms/MainForm.zh-Hans.resx
+++ b/clashN/clashN/Forms/MainForm.zh-Hans.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -118,26 +58,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="cmsLv.Size" type="System.Drawing.Size, System.Drawing">
-    <value>254, 380</value>
-  </data>
-  <data name="lvProfiles.Items" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkMAwAAAFFTeXN0
-        ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2Vu
-        PWIwM2Y1ZjdmMTFkNTBhM2EFAQAAACFTeXN0ZW0uV2luZG93cy5Gb3Jtcy5MaXN0Vmlld0l0ZW0HAAAA
-        BFRleHQKSW1hZ2VJbmRleAlCYWNrQ29sb3IHQ2hlY2tlZARGb250CUZvcmVDb2xvchdVc2VJdGVtU3R5
-        bGVGb3JTdWJJdGVtcwEABAAEBAAIFFN5c3RlbS5EcmF3aW5nLkNvbG9yAwAAAAETU3lzdGVtLkRyYXdp
-        bmcuRm9udAMAAAAUU3lzdGVtLkRyYXdpbmcuQ29sb3IDAAAAAQIAAAAGBAAAAAD/////Bfv///8UU3lz
-        dGVtLkRyYXdpbmcuQ29sb3IEAAAABG5hbWUFdmFsdWUKa25vd25Db2xvcgVzdGF0ZQEAAAAJBwcDAAAA
-        CgAAAAAAAAAAGAABAAAJBgAAAAH5////+////woAAAAAAAAAABoAAQABBQYAAAATU3lzdGVtLkRyYXdp
-        bmcuRm9udAQAAAAETmFtZQRTaXplBVN0eWxlBFVuaXQBAAQECxhTeXN0ZW0uRHJhd2luZy5Gb250U3R5
-        bGUDAAAAG1N5c3RlbS5EcmF3aW5nLkdyYXBoaWNzVW5pdAMAAAADAAAABggAAAAG5a6L5L2TAAAQQQX3
-        ////GFN5c3RlbS5EcmF3aW5nLkZvbnRTdHlsZQEAAAAHdmFsdWVfXwAIAwAAAAAAAAAF9v///xtTeXN0
-        ZW0uRHJhd2luZy5HcmFwaGljc1VuaXQBAAAAB3ZhbHVlX18ACAMAAAADAAAACw==
-</value>
-  </data>
   <data name="menuAddProfile.Size" type="System.Drawing.Size, System.Drawing">
     <value>253, 22</value>
   </data>
@@ -171,11 +91,23 @@
   <data name="tsbSubUpdate.Text" xml:space="preserve">
     <value>更新订阅(不通过代理)</value>
   </data>
+  <data name="tsbSubUpdateSelected.Size" type="System.Drawing.Size, System.Drawing">
+    <value>253, 22</value>
+  </data>
+  <data name="tsbSubUpdateSelected.Text" xml:space="preserve">
+    <value>多选更新订阅(不通过代理)</value>
+  </data>
   <data name="tsbSubUpdateViaProxy.Size" type="System.Drawing.Size, System.Drawing">
     <value>253, 22</value>
   </data>
   <data name="tsbSubUpdateViaProxy.Text" xml:space="preserve">
     <value>更新订阅(通过代理)</value>
+  </data>
+  <data name="tsbSubUpdateViaProxySelected.Size" type="System.Drawing.Size, System.Drawing">
+    <value>253, 22</value>
+  </data>
+  <data name="tsbSubUpdateViaProxySelected.Text" xml:space="preserve">
+    <value>多选更新订阅(通过代理)</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>250, 6</value>
@@ -234,12 +166,6 @@
   <data name="toolStripSeparator9.Size" type="System.Drawing.Size, System.Drawing">
     <value>250, 6</value>
   </data>
-  <data name="tsbTestMe.Size" type="System.Drawing.Size, System.Drawing">
-    <value>253, 22</value>
-  </data>
-  <data name="tsbCurrentProxies.Text" xml:space="preserve">
-    <value>当前代理</value>
-  </data>
   <data name="menuClearProfileStatistics.Size" type="System.Drawing.Size, System.Drawing">
     <value>253, 22</value>
   </data>
@@ -252,53 +178,37 @@
   <data name="tsbProfile.Text" xml:space="preserve">
     <value>  配置文件  </value>
   </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>配置文件</value>
+  <data name="cmsLv.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 402</value>
   </data>
-  <data name="gbMsgTitle.Text" xml:space="preserve">
-    <value>信息</value>
+  <data name="lvProfiles.Items" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5DAMAAABRU3lzdGVtLkRyYXdpbmcsIFZlcnNp
+        b249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNmNWY3ZjExZDUwYTNh
+        BQEAAAAhU3lzdGVtLldpbmRvd3MuRm9ybXMuTGlzdFZpZXdJdGVtBwAAAARUZXh0CkltYWdlSW5kZXgJ
+        QmFja0NvbG9yB0NoZWNrZWQERm9udAlGb3JlQ29sb3IXVXNlSXRlbVN0eWxlRm9yU3ViSXRlbXMBAAQA
+        BAQACBRTeXN0ZW0uRHJhd2luZy5Db2xvcgMAAAABE1N5c3RlbS5EcmF3aW5nLkZvbnQDAAAAFFN5c3Rl
+        bS5EcmF3aW5nLkNvbG9yAwAAAAECAAAABgQAAAAA/////wX7////FFN5c3RlbS5EcmF3aW5nLkNvbG9y
+        BAAAAARuYW1lBXZhbHVlCmtub3duQ29sb3IFc3RhdGUBAAAACQcHAwAAAAoAAAAAAAAAABgAAQAACQYA
+        AAAB+f////v///8KAAAAAAAAAAAaAAEAAQUGAAAAE1N5c3RlbS5EcmF3aW5nLkZvbnQEAAAABE5hbWUE
+        U2l6ZQVTdHlsZQRVbml0AQAEBAsYU3lzdGVtLkRyYXdpbmcuRm9udFN0eWxlAwAAABtTeXN0ZW0uRHJh
+        d2luZy5HcmFwaGljc1VuaXQDAAAAAwAAAAYIAAAABuWui+S9kwAAEEEF9////xhTeXN0ZW0uRHJhd2lu
+        Zy5Gb250U3R5bGUBAAAAB3ZhbHVlX18ACAMAAAAAAAAABfb///8bU3lzdGVtLkRyYXdpbmcuR3JhcGhp
+        Y3NVbml0AQAAAAd2YWx1ZV9fAAgDAAAAAwAAAAs=
+</value>
   </data>
-  <data name="cmsMsgBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>161, 114</value>
+  <data name="tpProxies.Text" xml:space="preserve">
+    <value>    当前代理    </value>
   </data>
-  <data name="menuMsgBoxSelectAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 22</value>
-  </data>
-  <data name="menuMsgBoxSelectAll.Text" xml:space="preserve">
-    <value>全选 (Ctrl+A)</value>
-  </data>
-  <data name="menuMsgBoxCopy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 22</value>
-  </data>
-  <data name="menuMsgBoxCopy.Text" xml:space="preserve">
-    <value>复制 (Ctrl+C)</value>
-  </data>
-  <data name="menuMsgBoxCopyAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 22</value>
-  </data>
-  <data name="menuMsgBoxCopyAll.Text" xml:space="preserve">
-    <value>复制所有</value>
-  </data>
-  <data name="menuMsgBoxClear.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 22</value>
-  </data>
-  <data name="menuMsgBoxClear.Text" xml:space="preserve">
-    <value>清除所有</value>
-  </data>
-  <data name="menuMsgBoxFilter.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 22</value>
-  </data>
-  <data name="menuMsgBoxFilter.Text" xml:space="preserve">
-    <value>设置信息过滤器</value>
-  </data>
-  <data name="toolSslProfileSpeed.Text" xml:space="preserve">
-    <value>网速显示未启用</value>
+  <data name="tpProfile.Text" xml:space="preserve">
+    <value>    配置文件    </value>
   </data>
   <data name="cmsMain.Size" type="System.Drawing.Size, System.Drawing">
-    <value>261, 221</value>
+    <value>193, 170</value>
   </data>
   <data name="menuSysAgentMode.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuSysAgentMode.Text" xml:space="preserve">
     <value>系统代理</value>
@@ -321,62 +231,107 @@
   <data name="menuKeepNothing.Text" xml:space="preserve">
     <value>不改变系统代理</value>
   </data>
-  <data name="menuRoutings.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+  <data name="menuRuleMode.Size" type="System.Drawing.Size, System.Drawing">
+    <value>192, 22</value>
   </data>
   <data name="menuRuleMode.Text" xml:space="preserve">
     <value>规则模式</value>
   </data>
+  <data name="menuModeRule.Size" type="System.Drawing.Size, System.Drawing">
+    <value>156, 22</value>
+  </data>
+  <data name="menuModeRule.Text" xml:space="preserve">
+    <value>规则</value>
+  </data>
+  <data name="menuModeGlobal.Size" type="System.Drawing.Size, System.Drawing">
+    <value>156, 22</value>
+  </data>
+  <data name="menuModeGlobal.Text" xml:space="preserve">
+    <value>全局</value>
+  </data>
+  <data name="menuModeDirect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>156, 22</value>
+  </data>
+  <data name="menuModeDirect.Text" xml:space="preserve">
+    <value>直连</value>
+  </data>
+  <data name="menuModeKeep.Size" type="System.Drawing.Size, System.Drawing">
+    <value>156, 22</value>
+  </data>
+  <data name="menuModeKeep.Text" xml:space="preserve">
+    <value>不变(随原配置)</value>
+  </data>
   <data name="menuProfiles.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuProfiles.Text" xml:space="preserve">
     <value>配置文件</value>
   </data>
-  <data name="menuProfiles2.ToolTipText" xml:space="preserve">
-    <value>配置文件</value>
-  </data>
   <data name="toolStripSeparator13.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 6</value>
-  </data>
-  <data name="menuAddProfiles2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
-  </data>
-  <data name="menuAddProfiles2.Text" xml:space="preserve">
-    <value>从剪贴板导入配置文件</value>
+    <value>189, 6</value>
   </data>
   <data name="menuScanScreen2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuScanScreen2.Text" xml:space="preserve">
     <value>扫描屏幕上的二维码</value>
   </data>
   <data name="menuUpdateSubscriptions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuUpdateSubscriptions.Text" xml:space="preserve">
     <value>更新订阅(不通过代理)</value>
   </data>
   <data name="menuUpdateSubViaProxy.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuUpdateSubViaProxy.Text" xml:space="preserve">
     <value>更新订阅(通过代理)</value>
   </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 6</value>
+    <value>189, 6</value>
   </data>
   <data name="menuExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>260, 22</value>
+    <value>192, 22</value>
   </data>
   <data name="menuExit.Text" xml:space="preserve">
     <value>退出</value>
+  </data>
+  <data name="tsbCurrentProxies.Size" type="System.Drawing.Size, System.Drawing">
+    <value>69, 53</value>
+  </data>
+  <data name="tsbCurrentProxies.Text" xml:space="preserve">
+    <value>当前代理</value>
+  </data>
+  <data name="tsbProxiesReload.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="tsbProxiesReload.Text" xml:space="preserve">
+    <value>重新加载</value>
+  </data>
+  <data name="tsbProxiesSpeedtest.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="tsbProxiesSpeedtest.Text" xml:space="preserve">
+    <value>延迟测试</value>
+  </data>
+  <data name="tsbProxiesSelectActivity.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="tsbProxiesSelectActivity.Text" xml:space="preserve">
+    <value>选择活动节点</value>
   </data>
   <data name="tsbQRCodeSwitch.Size" type="System.Drawing.Size, System.Drawing">
     <value>52, 53</value>
   </data>
   <data name="tsbQRCodeSwitch.Text" xml:space="preserve">
     <value>  分享  </value>
+  </data>
+  <data name="tsbReload.Size" type="System.Drawing.Size, System.Drawing">
+    <value>76, 53</value>
+  </data>
+  <data name="tsbReload.Text" xml:space="preserve">
+    <value>  重启服务  </value>
   </data>
   <data name="tsbSetting.Size" type="System.Drawing.Size, System.Drawing">
     <value>61, 53</value>
@@ -405,12 +360,6 @@
   <data name="tsbBackupGuiNConfig.Text" xml:space="preserve">
     <value>备份clashN配置文件</value>
   </data>
-  <data name="tsbReload.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 53</value>
-  </data>
-  <data name="tsbReload.Text" xml:space="preserve">
-    <value>  重启服务  </value>
-  </data>
   <data name="tsbCheckUpdate.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 53</value>
   </data>
@@ -418,37 +367,28 @@
     <value>  检查更新  </value>
   </data>
   <data name="tsbCheckUpdateN.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 22</value>
+    <value>174, 22</value>
   </data>
   <data name="tsbCheckUpdateN.Text" xml:space="preserve">
     <value>更新 clashN</value>
   </data>
   <data name="tsbCheckUpdateCore.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 22</value>
+    <value>174, 22</value>
   </data>
   <data name="tsbCheckUpdateCore.Text" xml:space="preserve">
     <value>更新 Core</value>
   </data>
   <data name="tsbCheckUpdateMetaCore.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 22</value>
+    <value>174, 22</value>
   </data>
   <data name="tsbCheckUpdateMetaCore.Text" xml:space="preserve">
     <value>更新 Meta Core</value>
   </data>
   <data name="toolStripSeparator15.Size" type="System.Drawing.Size, System.Drawing">
-    <value>163, 6</value>
+    <value>171, 6</value>
   </data>
-  <data name="tsbCheckUpdateGeoSite.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 22</value>
-  </data>
-  <data name="tsbCheckUpdateGeoSite.Text" xml:space="preserve">
-    <value>更新 GeoSite</value>
-  </data>
-  <data name="tsbCheckUpdateGeoIP.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 22</value>
-  </data>
-  <data name="tsbCheckUpdateGeoIP.Text" xml:space="preserve">
-    <value>更新 GeoIP</value>
+  <data name="tsbCheckUpdateGeo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>174, 22</value>
   </data>
   <data name="tsbHelp.Size" type="System.Drawing.Size, System.Drawing">
     <value>69, 53</value>
@@ -470,23 +410,5 @@
   </data>
   <data name="tsbClose.Text" xml:space="preserve">
     <value>  关闭窗口  </value>
-  </data>
-  <data name="tsbSubUpdateSelected.Text" xml:space="preserve">
-    <value>多选更新订阅(不通过代理)</value>
-  </data>
-  <data name="tsbSubUpdateViaProxySelected.Text" xml:space="preserve">
-    <value>多选更新订阅(通过代理)</value>
-  </data>
-  <data name="menuModeDirect.Text" xml:space="preserve">
-    <value>直连</value>
-  </data>
-  <data name="menuModeGlobal.Text" xml:space="preserve">
-    <value>全局</value>
-  </data>
-  <data name="menuModeKeep.Text" xml:space="preserve">
-    <value>不变(随原配置)</value>
-  </data>
-  <data name="menuModeRule.Text" xml:space="preserve">
-    <value>规则</value>
   </data>
 </root>
