--- a/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
+++ b/clashN/clashN/Forms/OptionSettingForm.zh-Hans.resx
@@ -61,6 +61,18 @@
     <value>取消(&amp;C)</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>662, 428</value>
+  </data>
+  <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>654, 398</value>
+  </data>
+  <data name="tabPage1.Text" xml:space="preserve">
+    <value>  Core:基础设置  </value>
+  </data>
+  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>648, 392</value>
+  </data>
   <data name="chkEnableIpv6.Size" type="System.Drawing.Size, System.Drawing">
     <value>76, 21</value>
   </data>
@@ -103,14 +115,20 @@
   <data name="label2.Text" xml:space="preserve">
     <value>本地http监听端口</value>
   </data>
-  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>648, 392</value>
-  </data>
-  <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="tabPage7.Size" type="System.Drawing.Size, System.Drawing">
     <value>654, 398</value>
   </data>
-  <data name="tabPage1.Text" xml:space="preserve">
-    <value>  Core:基础设置  </value>
+  <data name="tabPage7.Text" xml:space="preserve">
+    <value>  clashN设置  </value>
+  </data>
+  <data name="txtautoDelayTestInterval.Location" type="System.Drawing.Point, System.Drawing">
+    <value>276, 157</value>
+  </data>
+  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
+    <value>176, 17</value>
+  </data>
+  <data name="label8.Text" xml:space="preserve">
+    <value>自动延迟测试的间隔 (单位分钟)</value>
   </data>
   <data name="label7.Size" type="System.Drawing.Size, System.Drawing">
     <value>148, 17</value>
@@ -128,7 +146,7 @@
     <value>字体重置</value>
   </data>
   <data name="txtautoUpdateSubInterval.Location" type="System.Drawing.Point, System.Drawing">
-    <value>276, 153</value>
+    <value>276, 129</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
     <value>172, 17</value>
@@ -152,7 +170,7 @@
     <value>解除Windows10 UWP应用回环代理限制</value>
   </data>
   <data name="txtautoUpdateInterval.Location" type="System.Drawing.Point, System.Drawing">
-    <value>276, 124</value>
+    <value>276, 101</value>
   </data>
   <data name="label15.Size" type="System.Drawing.Size, System.Drawing">
     <value>196, 17</value>
@@ -178,11 +196,17 @@
   <data name="chkAutoRun.Text" xml:space="preserve">
     <value>开机自动启动(可能会不成功)</value>
   </data>
-  <data name="tabPage7.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="tabPage3.Size" type="System.Drawing.Size, System.Drawing">
     <value>654, 398</value>
   </data>
-  <data name="tabPage7.Text" xml:space="preserve">
-    <value>  clashN设置  </value>
+  <data name="tabPage3.Text" xml:space="preserve">
+    <value>  系统代理设置  </value>
+  </data>
+  <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>654, 398</value>
+  </data>
+  <data name="groupBox2.Text" xml:space="preserve">
+    <value>例外</value>
   </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>91, 17</value>
@@ -196,29 +220,14 @@
   <data name="label12.Text" xml:space="preserve">
     <value>对于下列字符开头的地址不使用代理配置文件:</value>
   </data>
-  <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>654, 398</value>
-  </data>
-  <data name="groupBox2.Text" xml:space="preserve">
-    <value>例外</value>
-  </data>
-  <data name="tabPage3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>654, 398</value>
-  </data>
-  <data name="tabPage3.Text" xml:space="preserve">
-    <value>  系统代理设置  </value>
-  </data>
-  <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>662, 428</value>
-  </data>
-  <data name="btnOK.Text" xml:space="preserve">
-    <value>确定(&amp;O)</value>
-  </data>
   <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 438</value>
   </data>
   <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
     <value>662, 60</value>
+  </data>
+  <data name="btnOK.Text" xml:space="preserve">
+    <value>确定(&amp;O)</value>
   </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>662, 10</value>
